<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">







        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:padding="5dp"
                android:text="@string/ReportQuestion1"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:padding="5dp"
                android:text="@string/ReportAnswer1"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:padding="5dp"
                android:text="@string/ReportQuestion2"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:padding="5dp"
                android:text="@string/ReportAnswer2"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:padding="5dp"
                android:text="@string/ReportQuestion3"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:padding="5dp"
                android:text="@string/ReportAnswer3"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:padding="5dp"
                android:text="@string/ReportQuestion4"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:padding="5dp"
                android:text="@string/ReportAnswer4"
                android:textColor="#666"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00cc00"
                android:text="@string/ReportElimination"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>


